src/test/java/syntaxerror/sagar/SagarApplicationTests.java
package syntaxerror.sagar;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class SagarApplicationTests {

	@Test
	void contextLoads() {
	}

}
